# entre-nous-mvp

./: README.md  detail.gitignore
backend/app/: main.py
backend/app/api/: auth.py
backend/app/core/: logging.py  settings.py
backend/app/services/: crypto.py
entre-nous-mvp-fixed/entre-nous-mvp/: README.md
entre-nous-mvp-fixed/entre-nous-mvp/backend/: docker-compose.yml
entre-nous-mvp-fixed/entre-nous-mvp/backend/app/models/: __init__.py  moderation.py
entre-nous-mvp-fixed/entre-nous-mvp/backend/docs/: THREAT_MODEL.md
entre-nous-mvp-fixed/entre-nous-mvp/frontend/: package.json
entre-nous-mvp-fixed/entre-nous-mvp/frontend/src/: styles.css
entre-nous-mvp/backend/: Dockerfile
entre-nous-mvp/backend/alembic/versions/: 0001_init.py
entre-nous-mvp/backend/app/: main.py
entre-nous-mvp/backend/app/api/: __init__.py  admin.py  deps.py  dm.py  feed.py  gdpr.py  moderation.py  schemas.py
entre-nous-mvp/backend/app/core/: middleware.py  redis.py
entre-nous-mvp/backend/app/db/: session.py
entre-nous-mvp/backend/app/models/: dm.py  reply.py  session.py  user.py
entre-nous-mvp/backend/app/services/: auth.py  crypto.py  moderation.py  ranking.py
entre-nous-mvp/entre-nous-mvp/backend/: README.md  pyproject.toml
entre-nous-mvp/entre-nous-mvp/backend/alembic/: env.py
entre-nous-mvp/entre-nous-mvp/backend/app/api/: posts.py  schemas.py
entre-nous-mvp/entre-nous-mvp/backend/app/models/: post.py
entre-nous-mvp/frontend/: index.html
entre-nous-mvp/frontend/src/: App.tsx
