[project]
name = "entre-nous-backend"
version = "0.1.0"
description = "Entre Nous MVP backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-jose[cryptography]>=3.3",
  "argon2-cffi>=23.1",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "slowapi>=0.1.9",
  "cryptography>=42.0",
  "pynacl>=1.5",
  "structlog>=24.1",
  "httpx>=0.27",
  "orjson>=3.10",
]
